Fixed alignment on contact

--- a/artifact-campaign/assets/css/style.css
+++ b/artifact-campaign/assets/css/style.css
@@ -297,7 +297,11 @@ h2 {
 
 .mailtext a {
   color: #71c5c9;
-  text-align: center
+}
+
+.mailtext {
+  text-align: center;
+    padding: 0 0 25px 0;
 }
 
 .phone img {
@@ -307,4 +311,10 @@ h2 {
 
 .phone {
   text-align: center;
+}
+
+.phonenumber p {
+  text-align: center;
+  margin: 0;
+  padding: 0;
 }
